<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AList</string>
    <string name="menu_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="activeListTitle">Active List: </string>
    <string name="btnAddMasterListItem">Add</string>
    <string name="btnStartListsViewActivity">Show</string>
    <string name="addMasterListItem">Add</string>
    <string name="addMasterListItemHint">Enter Item</string>
    <string name="editMasterListItem">Edit Item</string>
    <string name="deleteMasterListItem">Delete Item</string>
    <string name="sortingMasterList">Select Sort Order</string>
    <string name="addNewList">Add New List</string>
    <string name="addNewListTitleHint">New List Title</string>
    <string name="addNewListTitleContentDescription">New List Title</string>
    <string name="editActiveListTitle">Edit List Title</string>
    <string name="deleteActiveList">Delete List</string>
    <string name="deleteAllMasterListItems">Delete All Items</string>
    <string name="clearAllSelectedItems">Clear All Selected Items</string>
    <string name="spnListTitleEmpty">Create or Select a List</string>
    <string name="masterListTextViewHint">Master List Item</string>
    <string name="listTitlesTextViewHint">List Title</string>
    <string name="listTypesTextViewHint">List Type</string>
    <string name="sort_alphabetical">Alphabetical</string>
    <string name="sort_selected_at_bottom">Selected items at bottom</string>
    <string name="sort_selected_at_top">Selected items at top</string>
    <string name="sort_selected_not_shown">Do not show selected items</string>
    <string name="sort_dialog_title">Choose how to sort the master items list.</string>
    <string name="set_sort_order">SET SORT ORDER</string>
    <string name="btnCreateNewList">Create New List</string>
    <string name="txtNewListTitleInputHint">List Title</string>
    <string name="newListTitlePrompt">Enter the new list\'s title:</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="txtNewListTitleHint">New List Title</string>
    <string name="btnNewCategory">New Cat</string>
    <string name="btnNewListType">New Type</string>
    <string name="NewItemTypeHint">New Item Type</string>
    <string name="btnAddNewItemTypeHint">Add</string>
    <string name="defalutCategoryValue">[No Category]</string>

</resources>