<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/masterListRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lt_grey"
    android:baselineAligned="false"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="4dp" >

    <LinearLayout
        android:id="@+id/linearLayoutListTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spnListTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:longClickable="false"
            android:prompt="@string/spnListTitleEmpty" >
        </Spinner>

        <Button
            android:id="@+id/btnShowListsActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnStartListsViewActivity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/txtListItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rectangle_black_stroke"
            android:hint="@string/addMasterListItemHint"
            android:inputType="textAutoCorrect|textCapWords"
            android:maxLines="1"
            android:paddingBottom="6dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="6dp" />

        <Button
            android:id="@+id/btnAddToMasterList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addMasterListItem" />
    </LinearLayout>

    <ListView
        android:id="@+id/lstItems"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="@drawable/list_selector" >
    </ListView>

</LinearLayout>