<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/createListRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lt_grey"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="4dp" >

    <EditText
        android:id="@+id/txtNewListTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_black_stroke"
        android:hint="Enter List Title"
        android:inputType="textAutoCorrect|textCapWords"
        android:maxLines="1"
        android:paddingBottom="6dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="6dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spnListTypes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1" >
        </Spinner>

        <Button
            android:id="@+id/btnNewListType"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:text="@string/btnNewListType"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newListTypeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <EditText
            android:id="@+id/txtNewListTypeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rectangle_black_stroke"
            android:hint="Enter List Type"
            android:inputType="textAutoCorrect|textCapWords"
            android:maxLines="1"
            android:paddingBottom="6dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="6dp" />

        <Button
            android:id="@+id/btnAddListType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingTop="6dp"
        android:text="Background and Text Colors Preview:" >
    </TextView>

    <ListView
        android:id="@+id/lstPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp" >
    </ListView>

    <Button
        android:id="@+id/btnSelectColors"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:enabled="False"
        android:text="Color Selection Control" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:text="@string/Cancel" />

        <Button
            android:id="@+id/btnCreateNewList"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:text="@string/btnCreateNewList" />
    </LinearLayout>

</LinearLayout>